--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1277,7 +1277,7 @@
 
 									<div class="dropdown-divider mb-0"></div>
 
-									<a href="#!" class="prefix-icon-ignore dropdown-footer dropdown-custom-ignore font-weight-medium pt-3 pb-3">
+									<a (click)="logout()" class="prefix-icon-ignore dropdown-footer dropdown-custom-ignore font-weight-medium pt-3 pb-3">
 										<em class="fi fi-power float-start"></em>
 										Log Out
 									</a>
